2003-11-28  David Woodhouse  <dwmw2@redhat.com>

	* providers/imap/camel-imap-provider.c: Enable GUI option for
	'custom command' connection.
	* providers/imap/camel-imap-store.c: Don't g_free strings in
	.rodata. It's considered rude.

2003-11-28  Not Zed  <NotZed@Ximian.com>

	* camel-mime-utils.c (mail_list_magic[]): Added list-unsubscribe
	header match.

2003-11-26  Not Zed  <NotZed@Ximian.com>

	* camel-smime-context.c (sm_verify_cmsg): take a stream rather
	than a part for the content.
	(sm_verify): get the content directly as a stream.

	* camel-multipart-signed.c
	(camel_multipart_signed_get_content_stream): new api to get the
	content stream which will match the signed version.

2003-11-26  JP Rosevear <jpr@ximian.com>

	* Makefile.am: make sure we always dist the smime stuff

2003-11-26  JP Rosevear  <jpr@ximian.com>

	* Makefile.am (libcamelinclude_HEADERS): conditionally compile
	s/mime support

2003-11-25  Not Zed  <NotZed@Ximian.com>

	* camel-cipher-context.c (camel_cipher_validity_envelope): change
	args to make it suit storing the validity in a tree.
	(camel_cipher_validity_init): init the list header.
	(camel_cipher_validity_clone): call validity_new so it gets init
	properly.
	(camel_cipher_validity_free): free any children nodes recursively.

	* camel-cipher-context.h (CamelCipherValidity): added next/prev
	and list header.

2003-11-18  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-session.c (camel_session_finalise): Don't destroy the
	providers as it mans we can never ever have more than 1 session
	object. See bug #51119 for details.

2003-11-17  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (create_folder): Fixed an
	exception to give a more meaningful description.
	(get_folder_info): We always want to scan at least one level deep.

2003-11-14  Jeffrey Stedfast  <fejj@ximian.com>

	* providers/local/camel-mbox-store.c (get_folder_info): Handle ""
	as a request for a full dirscan as well (not just NULL). Makes it